# hierarchical_data

./: db.sqlite3  manage.py  pyproject.toml
genre/: README.md  admin.py  models.py  views.py
genre/migrations/: 0001_initial.py
mpttdemo/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
